# nexus.core

./: .env.example  .flake8  .gitignore  ANALYSIS_REPORT.md  API_CONSOLIDATION_REPORT.md  CONTRIBUTING.md  DEPENDENCY_CLEANUP_PLAN.md  DEPENDENCY_MIGRATION_REPORT.md  Dockerfile  ENTERPRISE_INFRASTRUCTURE_GUIDE.md  FASE_1_COMPLETADA.md  IMPLEMENTATION_SUMMARY.md  MCP_SETUP_GUIDE.md  MIGRATION_PLAN.md  Makefile  NEXUS_MAXIMIZATION_GUIDE.md  NGX_AI_WORKFLOWS.md  NGX_PROMPT_TEMPLATES.md  NGX_RAPID_ANALYSIS_MACROS.md  NGX_ROLE_SPECIFIC_WORKFLOWS.md  PERFORMANCE_OPTIMIZATION.md  README.md  SECURITY.md  SECURITY_BASELINE.md  TYPESCRIPT_STRICT_MIGRATION.md  claude.md  claude_desktop_config.json  docker-compose.yml  manage.py
backend/: .env.example  BACKEND_PERFORMANCE_TEST.md  CLEAN_ARCHITECTURE_IMPLEMENTATION.md  CLEAN_ARCHITECTURE_PLAN.md  DATABASE_OPTIMIZATION_GUIDE.md  Makefile  README.md  TESTING_IMPLEMENTATION.md  api_consolidation_plan.py  bandit-report.json  main.py  migrate_modules.py  pyproject-testing.toml  pyproject.toml  pyproject.toml.optimized  pytest.ini  requirements.txt  routers-optimized.json  routers.json  routers.json.optimized
backend/.github/workflows/: tests.yml
backend/app/: logger.py
backend/app/apis/activity_logs/: __init__.py
backend/app/apis/agent/: __init__.py
backend/app/apis/agent_mcp/: __init__.py
backend/app/apis/analytics/: __init__.py
backend/app/apis/business/: __init__.py
backend/databutton_app/mw/: auth_mw.py
backend/migrations/: __init__.py  v001_initial_schema.py
backend/src/: main.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_clients_api.py  test_config.py
backend/tests/e2e/: test_mcp_integration.py
backend/tests/integration/: test_api_health.py  test_mcp_basic.py
backend/tests/unit/: test_health.py
(+283 files in other folders)
