[project]
name = "nexus-core-backend"
version = "2.0.0"
description = "NEXUS-CORE Backend - Enterprise Control Center for NGX Performance & Longevity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI Stack
    "fastapi==0.111.0",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.29.0",
    
    # Database & External Services
    "supabase==2.15.3",
    "openai==1.69.0",
    
    # HTTP & Web Scraping
    "requests==2.32.4",
    "beautifulsoup4==4.12.3",
    
    # Development Tools
    "ipykernel==6.29.5",
]

[project.optional-dependencies]
dev = [
    # Testing Dependencies
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "httpx==0.27.0",
    "pytest-cov==4.1.0",
    
    # Code Quality
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
